<resources>
    <string name="app_name">Football Match Schedule</string>
    <string name="last_match">Last Match</string>
    <string name="next_match">Next Match</string>
    <string name="versus">VS</string>
    <string name="goals">Goals</string>
    <string name="shots">Shots</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="lineups">Lineups</string>
    <string name="defense">Defense</string>
    <string name="midfield">Midfield</string>
    <string name="forward">Forward</string>
    <string name="substitutes">Substitutes</string>
    <string name="teams">Teams</string>
    <string name="team_favorites">Team Favorites</string>
</resources>
